app/assets/stylesheets/restaurant_show.scss
.restaurant-show {
    display: flex;
    justify-content: center;
    flex-direction: row;
}

.restaurant-banner {
    position: absolute;
    width: 100%;
    height: 500px;
}

.restaurant-banner img {
    object-fit: cover;
    height: 100%;
    width: 100%;
}

.restaurant-left-col {
    display: flex;
    justify-content: left;
    flex-direction: column;
    margin-right: 16px;
    margin-top: 450px;
    padding: 0px 16px;
    z-index: 1;
    background-color: white;
    width: 600px;
    border-radius: 4px;
}

.restaurant-right-col {
    display: flex;
    flex-direction: column;
    z-index: 1;
    background-color: white;
    margin-top: 450px;
    width: 300px;
    border-radius: 4px;
}

.restaurant-section-links {
    display: flex;
    padding: 16px 0px;
    border-bottom: 1px solid lightgray;
}

.restaurant-description {
    line-height: 1.5;
    padding: 16px 0px;
    border-bottom: 1px solid lightgray;
}

.restaurant-section-links li {
    margin-right: 32px;
    cursor: pointer;
}

.restaurant-show-name {
    font-size: 48px;
    padding: 32px 0px;
    border-bottom: 1px solid lightgray;
}

.details-list {
    display: flex;
}

.details-list li {
    padding: 10px 0px;
    margin-right: 24px;
    display: flex;
}

.reservation-tile {
    display: flex;
    flex-direction: column;
    border: 1px solid lightgray;
    border-radius: 4px;
    padding: 0px 16px 16px 16px;
}

.make-reservation {
    text-align: center;
    padding: 16px 0px;
    border-bottom: 1px solid lightgray;
}

.date-and-time {
    display: flex;
}

.reservation-party {
    border-bottom: 1px solid lightgray;
}

.reservation-party > select {
    width: 100%;
    height: 100%;
    border: none;
    padding: 16px 0px;
}

.reservation-date {
    border-bottom: 1px solid lightgray;
    width: 100%;
}

.reservation-time {
    border-bottom: 1px solid lightgray;
    width: 100%;
}

.reservation-time > select {
    width: 100%;
    border: none;
    vertical-align: center;
    padding: 16px 0px;
}

.reservation-detail-header {
    padding-top: 8px;
    padding-bottom: 4px;
}

.reviews-header {
    padding: 16px 0px;
    border-bottom: 1px solid lightgray;
    font-size: 24px;
}

.reviews-intro {
    border-bottom: 1px solid lightgray;
    padding-bottom: 16px;
}

.reviews-intro-header {
    font-weight: bolder;
    padding: 16px 0px;
}

.reviews-intro-description {
    padding-bottom: 16px;
}

.reviews-overall-rating {
    display: flex;
}

.overall-rating-categories {
    display: flex;
    padding: 16px 0px;
}

.overall-rating-categories > div {
    padding: 0px 8px;
    border-left: 1px solid lightgray;
}

.overall-rating-categories > div > div {
    padding: 4px 0px;
}

.overall-rating-categories div {
    text-align: center;
}

.overall-rating-categories > div:first-child {
    padding-left: 0px;
    border-left: none;
}

.additional-details {
    padding: 16px 0px;
}

.additional-details > li {
    padding-top: 8px;
}

.additional-info-header {
    font-size: 20px;
    padding: 8px 0px;
}

.additional-info-item {
    padding-top: 8px;
    display: flex;
}

.additional-info-content {
    padding-left: 24px;
    padding-bottom: 16px;
}

.datepicker-res-tile input {
    border: none;
    width: 100%;
    padding: 16px 0px;
    background-color: transparent;
}

.red-button-container {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 16px;
}
.red-button-container button {
    background-color: #da3743;
    color: white;
    border-radius: 4px;
    border: 1px solid lightgray;
    cursor: pointer;
    width: 100%;
    padding: 16px 0px;
    text-align: center;
    text-decoration: none;
}

#fav-button {
    z-index: 5;
    background-color: white;
    height: 24px;
    position: absolute;
    right: 32px;
    top: 32px;
    padding: 24px 12px;
    border-radius: 4px;
    border: 1px solid lightgray;
    display: flex;
    align-items: center;
    cursor: pointer;
}

.fav-button-content {
    display: flex;
}

.fav-button-content > i {
    font-size: 16px;
    margin-right: 8px;
}

.fa-message {
    padding-left: 8px;
    transform: scaleX(-1);
    -moz-transform: scaleX(-1);
    -webkit-transform: scaleX(-1);
    -ms-transform: scaleX(-1);
}

.fa-money-bill {
    font-family: FontAwesome;
    content: "\f0d6";
    padding-right: 8px;
}

.fa-utensils {
    font-family: FontAwesome;
    content: "\f2e7";
    padding-right: 8px;
}

.fa-building {
    padding-right: 12px;
}

.fa-phone {
    padding-right: 8px;
}

.fa-arrow-up-right-from-square {
    padding-right: 8px;
}

